fix wrong function

--- a/setup_map_sra_to_ontology/cellline_to_disease_implied_terms.json
+++ b/setup_map_sra_to_ontology/cellline_to_disease_implied_terms.json
@@ -11,6 +11,9 @@
         "EFO:0000621",
         "DOID:769"
     ],
+    "EFO:0002051": [
+        "DOID:3068"
+    ],
     "EFO:0002053": [
         "EFO:0004986",
         "EFO:0000313",
@@ -24,6 +27,9 @@
         "EFO:0000311",
         "DOID:2394",
         "DOID:162"
+    ],
+    "EFO:0002782": [
+        "DOID:3068"
     ],
     "EFO:0002885": [
         "EFO:0000311",
